--- a/src/UI/Frame_howToUse.form
+++ b/src/UI/Frame_howToUse.form
@@ -34,7 +34,7 @@
                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="67" max="32767" attributes="0"/>
+              <EmptySpace pref="56" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,7 +71,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt;Place the program at the same folder where you want to&lt;br/&gt;&#xa;generate the .txt file with the list.&lt;br/&gt;&#xa;&lt;br/&gt;&#xa;What this program do is to generate a .txt file with the names of all &lt;br/&gt;&#xa;the programs/folders inside of where you placed it.&lt;/html&gt;"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Place the program at the same folder where you want to&lt;br/&gt;&#xa;generate the .txt file with the list.&lt;br/&gt;&#xa;&lt;br/&gt;&#xa;What this program does is to generate a .txt file with the names of all &lt;br/&gt;&#xa;the programs/folders inside of where you placed it.&lt;/html&gt;"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
