--- a/src/UI/DefaultFrame.form
+++ b/src/UI/DefaultFrame.form
@@ -167,7 +167,7 @@
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="114" max="32767" attributes="0"/>
+                      <EmptySpace pref="103" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -194,7 +194,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Made by Just Vice"/>
+                <Property name="text" type="java.lang.String" value="Made by SPLIT VICE"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="logo_label">
